[project]
name = "multi-agent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.3",
    "docling>=2.43.0",
    "faiss-cpu>=1.11.0.post1",
    "gradio>=5.39.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.2",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rank-bm25>=0.2.2",
]
